<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            tools:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textColor="@color/color_text_4"
            android:textSize="@dimen/dimen_25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_welcome_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_info"
            android:textColor="@color/color_text_4"
            android:textSize="@dimen/dimen_15sp" />

    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_login_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"
        android:padding="@dimen/dimen_20dp"
        android:text="@string/login_screen_info"
        android:textAlignment="center"
        android:textColor="@color/color_text_4"
        android:textSize="@dimen/dimen_15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>