<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.educatorapp.ui.fragments.contactus.ContactViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_layout_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cl_layout_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icon_email_small" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_layout_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/icon_email_small"
                app:layout_constraintStart_toEndOf="@+id/icon_email"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_email"
                    style="?attr/textAppearanceSubtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/support_email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/support_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_email_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cl_layout_email"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icon_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/separator_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_01dp"
            android:layout_margin="3dp"
            android:background="@color/separator_color"
            app:layout_constraintTop_toBottomOf="@+id/cl_layout_1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_layout_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator_1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cl_layout_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icon_phone_small" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_layout_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/icon_phone_small"
                app:layout_constraintStart_toEndOf="@+id/icon_phone"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="0dp"
                    style="?attr/textAppearanceSubtitle1"
                    android:layout_height="wrap_content"
                    android:text="@string/support_call"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/support_call" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_phone_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cl_layout_phone"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icon_phone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/separator_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_01dp"
            android:layout_margin="3dp"
            android:background="@color/separator_color"
            app:layout_constraintTop_toBottomOf="@+id/cl_layout_2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_in_1"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator_2">

            <TextView
                android:id="@+id/txt_working_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:text="@string/reach_us"
                style="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/reach_us" />

            <View
                android:id="@+id/separator_3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_01dp"
                android:layout_margin="@dimen/dimen_5dp"
                android:background="@color/separator_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_working_label"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/edit_text_subject"
            style="@style/DataEntrySubjectTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="Subject"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="@dimen/dimen_40dp"
            android:padding="@dimen/dimen_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_in_1"
            tools:text="Subject" />

        <EditText
            android:id="@+id/edit_text_message"
            style="@style/DataEntrySubjectTextStyle"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:gravity="left"
            android:hint="Message"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minHeight="@dimen/dimen_100dp"
            android:padding="@dimen/dimen_10dp"
            android:textAlignment="gravity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_subject"
            tools:text="Message" />

        <!-- Material Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            style="@style/ButtonStyle"
            android:text="Submit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>